repositories/gitea-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitea
  name: gitea
  namespace: repository
spec:
  ports:
  - nodePort: 30020
    port: 22
    protocol: TCP
    targetPort: 22
    name: ssh-shell

  selector:
    app: gitea
  type: NodePort
